--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".SampleActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IndicatorActivity"/>
+        <activity android:name=".IndicatorActivity"
+                  android:exported="true"/>
     </application>
 
 </manifest>
