--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wang.avi.sample">
+    package="com.frogobox.apploadingindicator">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SampleActivity"
+            android:name="com.frogobox.apploadingindicator.SampleActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".IndicatorActivity"
+            android:name="com.frogobox.apploadingindicator.IndicatorActivity"
             android:exported="true" />
     </application>
 
